All comments now correctly display linebreaks and paragraphs, in both the editor textareas and in readable DOM elements. Fixed two serious bugs with React comments: backend updates are working again (React was using the wrong URL); subsequent frontend updates are working again (it was checking for a 200 response, when the server was sending 204)

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1191,6 +1191,17 @@ fieldset.form-row{
         .public-status{
             background-image: url(../images/i-speech-bubble.svg);
         }
+
+        p{
+            &:first-of-type{
+                margin-top: 0;
+            }
+
+            &:last-of-type{
+                margin-bottom: 0;
+            }
+        }
+
     }
 
     .footer{
